src/test/vm/trait_method_modif3.php.exp
HipHop Fatal error: Access level to Bar::f() must be protected (as in class Foo) or weaker in src/test/vm/trait_method_modif3.php on line 19
